[gd_scene load_steps=5 format=3 uid="uid://cv443d8gl0owa"]

[ext_resource type="Texture2D" uid="uid://5jp8l28invjm" path="res://ArtWork/Sprites/UI - Front/blank.png" id="1_1gsmf"]
[ext_resource type="Script" uid="uid://by7tfv3m01j61" path="res://Scripts/item_placer.gd" id="1_tuwl4"]
[ext_resource type="Texture2D" uid="uid://b7h056nd2nsuc" path="res://ArtWork/Sprites/UI - Front/add.png" id="3_2x2sk"]
[ext_resource type="AudioStream" uid="uid://bamie86lmsa4y" path="res://ArtWork/SFX/classic-punch-impact-352711.mp3" id="4_00xvh"]

[node name="ItemPlacer" type="Control"]
layout_mode = 3
anchor_right = 0.246
anchor_bottom = 0.145
offset_right = -95.93
offset_bottom = -95.65
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(7, 7)
script = ExtResource("1_tuwl4")
blank = ExtResource("1_1gsmf")
add = ExtResource("3_2x2sk")

[node name="Sprite" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
texture_normal = ExtResource("1_1gsmf")

[node name="ItemSprite" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 2
expand_mode = 1

[node name="FileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 2
size = Vector2i(353, 490)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
use_native_dialog = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_00xvh")
pitch_scale = 3.23

[connection signal="mouse_entered" from="Sprite" to="." method="_on_sprite_mouse_entered"]
[connection signal="mouse_exited" from="Sprite" to="." method="_on_sprite_mouse_exited"]
[connection signal="pressed" from="Sprite" to="." method="_on_sprite_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
